Wed May  6 15:50:22 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm/Type.java: types should not know signed
	  or not.

	* net/loveruby/cflat/ir/Op.java: have signed/unsigned information.

	* net/loveruby/cflat/compiler/IRGenerator.java: use new op and
	  type.

	* net/loveruby/cflat/compiler/CodeGenerator.java: ditto.

	* net/loveruby/cflat/compiler/TypeChecker.java (FuncallNode):
	  should check optional argument types.

	* net/loveruby/cflat/compiler/CodeGenerator.java: now use simple
	  mov to load values from memory (and cast it later).

	* net/loveruby/cflat/type/TypeTable.java: provide stack value
	  type.

Wed May  6 14:54:27 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: isStatement() did
	  not work correctly; e.g. return ++argc failed to return value,
	  because ++argc was wrongly judged as statemen (is really expr).

Wed May  6 14:19:12 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ir/StringValue.java -> Str.java

	* net/loveruby/cflat/ir/IntValue.java -> Int.java

	* net/loveruby/cflat/ir/IRVisitor.java: ditto.

	* net/loveruby/cflat/compiler/IRGenerator.java: ditto.

	* net/loveruby/cflat/compiler/CodeGenerator.java: ditto.

Mon May  4 19:00:33 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/LocalResolver.java: create
	  ToplevelScope, ConstantTable here (instead of creating them in
	  AST).

	* net/loveruby/cflat/ast/AST.java: do not create ToplevelScope,
	  ConstantTable by myself.

Sun May  3 22:17:57 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: new method dumpExpr
	  to dump single expression.

	* net/loveruby/cflat/compiler/CompilerMode.java: add enum value
	  DumpExpr: define new option --dump-expr.

Sun May  3 19:08:07 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: sizeof TYPE requires one
	  more lookahead because EXPR of "sizeof EXPR" may have parentheses,